Fix align problems in firefox 24

--- a/Resources/public/css/solerni_forum.css
+++ b/Resources/public/css/solerni_forum.css
@@ -253,6 +253,11 @@ i.icon-comment
     min-height:         166px;
 }
 
+.slrn-forum-table .slrn-forum-td--date-top-message {
+    border: none;
+}
+
+
 /* forum pagination */
 
 .slrn-forum-meta {
